objects/vlocity_cmt__AdSpaceGroupMember__c.object
<CustomObject>
    <description>The AdSpace GroupMember defines the association of an Ad Space specification record with an Ad Space Group record.</description>
    <fields>
        <fullName>vlocity_cmt__AdSpaceGroupId__c</fullName>
        <label>Ad Space Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_cmt__AdSpaceSpecification__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Ad Space Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_cmt__AdSpaceSpecification__c</referenceTo>
        <relationshipLabel>Ad Space Group Members</relationshipLabel>
        <relationshipName>AdSpaceGroupMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdSpaceGroupMemberId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ad Space Group Member</label>
        <referenceTo>vlocity_cmt__AdSpaceSpecification__c</referenceTo>
        <relationshipLabel>Ad Space Groups</relationshipLabel>
        <relationshipName>AdSpaceGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CoreId__c</fullName>
        <description>Displays the ID of the core object created when migrating custom data.</description>
        <label>Core Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Ad Space Group Member</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ad Space Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>